# raycaster_lib

./: .gitignore  Cargo.toml  README.md  a.out  ospTutorial.c
benches/: experiment.rs  render.rs
gtk-app/: main.rs
pushrod/: Cargo.toml
pushrod/examples/: base.rs
pushrod/src/: base_widget.rs  box_widget.rs  button_widget.rs  cache.rs  engine.rs  event.rs  geometry.rs  image_widget.rs  lib.rs  radio_button_widget.rs  text_widget.rs  widget.rs
raycaster_lib/: Cargo.toml
raycaster_lib/benches/: common.rs  experiment.rs  render.rs  render_main.rs
raycaster_lib/benches/render_benchmarks/: block.rs  block_ram.rs  block_stream.rs  float_block.rs  float_linear.rs  linear.rs  linear_ram.rs  linear_stream.rs  mod.rs  multi_thread.rs  single_thread.rs
raycaster_lib/src/: color.rs  lib.rs  perspective_camera.rs  ray.rs  test_helpers.rs  transfer_functions.rs
raycaster_lib/src/camera/: free_camera.rs  mod.rs  perspective_camera.rs  target_camera.rs
raycaster_lib/src/common/: bound_box.rs  mod.rs  ray.rs  value_range.rs  viewport_box.rs
raycaster_lib/src/premade/: mod.rs  parse.rs  transfer_functions.rs
raycaster_lib/src/render/: frame_swap.rs  mod.rs  paralel_renderer.rs  render_front.rs  render_options.rs  renderer.rs  st_renderer.rs
raycaster_lib/src/render/paralel_renderer/: communication.rs  compositor_worker.rs  master_thread.rs  messages.rs  mod.rs  paralel_renderer.rs  render_worker.rs
raycaster_lib/src/render/parallel_renderer/: communication.rs  composition.rs  compositor_worker.rs  master_thread.rs  messages.rs  mod.rs  render_worker.rs
raycaster_lib/src/volumetric/: block.rs  block_gen.rs  block_volume.rs  empty_index.rs  float_block.rs  float_block_volume.rs  float_volume.rs  linear_volume.rs  mod.rs  parse.rs  stream_block_volume.rs  stream_linear_volume.rs  stream_volume.rs  vol_builder.rs  vol_reader.rs  volume.rs
raycaster_lib/tests/: integration_test.rs
slint_app/: Cargo.toml
slint_app/src/: main.rs  render_thread.rs
slint_app/ui/: main.slint
src/: block.rs  camera.rs  lib.rs  main.rs  ray.rs  renderer.rs  vol_reader.rs  volume.rs
src/camera/: free_camera.rs  target_camera.rs
src/render/: frame_swap.rs  linear_render.rs  mod.rs  mt_linear.rs  renderer.rs  st_linear.rs
src/volume/: block.rs  mod.rs  vol_reader.rs  volume.rs
src/volumetric/: block.rs  block_volume.rs  empty_index.rs  linear_volume.rs  mod.rs  vol_builder.rs  vol_reader.rs  volume.rs
vol_app/: Cargo.toml  build.rs  egui_test.rs
vol_app/src/: gui.rs  gui_builder.rs  main.rs  pure_sdl.rs  render_thread.rs  state.rs
vol_app/src/app/: common.rs  defaults.rs  mod.rs  render_state.rs  state.rs  state_ref.rs
vol_app/ui/: main.slint
vol_gen/: Cargo.toml
vol_gen/src/: args.rs  config.rs  file.rs  generator.rs  header.rs  main.rs  sample_order.rs  shapes.rs
vol_gen/src/generators/: mod.rs  shapes.rs  solid.rs
vol_gen/src/orders/: linear_order.rs  mod.rs  z_order.rs
