[workspace]

members = [
    "raycaster_lib",
    "vol_app",
    "vol_gen"
]

# By default, run demo app
#default-members = ["vol_app"]

[profile.release]
debug = true # firegraph
debug-assertions = true

[profile.bench]
debug = true

[profile.release-full]
inherits = "release"
lto = true
codegen-units = 1
