[workspace]

members = [
    "raycaster_lib",
    "vol_app",
    "vol_gen"
]

# By default, run demo app
#default-members = ["vol_app"]

[profile.release]
debug = true # firegraph

[profile.bench]
debug = true

[profile.release-debug]
inherits = "release"
debug-assertions = true

[profile.release-full]
inherits = "release"
lto = true
codegen-units = 1
