[package]
name = "raycaster_lib"
version = "0.2.0"
edition = "2021"

[lib]
name = "raycaster_lib"
path = "src/lib.rs"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "render"
harness = false

[[bench]]
name = "experiment"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.0"
memmap = "0.7.0"
nalgebra = "0.30.1"
