[package]
name = "vol_app"
version = "0.2.0"
edition = "2018"

[dev-dependencies]
criterion = "0.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.29.0"
gl = "0.14.0"
rust-pushrod = "0.4.27"
raycaster_lib = { path = "../raycaster_lib" }

[dependencies.sdl2]
version = "0.33.0"
default-features = false
features = ["ttf","image"]
