[package]
name = "vol_app"
version = "0.2.0"
edition = "2021"

[dev-dependencies]
criterion = "0.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.29.0"
gl = "0.14.0"
raycaster_lib = { path = "../raycaster_lib" }
pushrod = { path = "../pushrod" }

[dependencies.sdl2]
version = "0.34.5"
default-features = false
features = ["ttf","image"]
